# python-ai-agent

./: .env  .gitignore  config.py  hosts.txt  log.txt  logs.txt  main.py  pyproject.toml
ai-lab/: build_adaptive_ai_tutor.py  build_ai_calorie_tracker.py  build_gradio.py  main.py  test.py
chat-bot/: logs.txt  responses.json  responses.txt
httpx/: main.py
httpxx/: main.py
llm_apis_genai/: main_openai.py
modules/: main.py
network_service/: devices.txt  log.txt  network_service.py
pandas/: chat_data.db  chat_data.yaml  data.json  data.xlsx  data1.json  model_logs.csv  pandas.ipynb  slow_responses.csv  working_with_csv.ipynb
working-with-files-and-data/: config.txt  config1.txt  main.py  sample.csv  sample.json  sample.txt  sample1.txt  sample2.txt  tab_logs.csv  u_mac-address.txt
